hphp/hack/test/enum_supertyping/typing/includes-not-enum.bad.php.exp
File "includes-not-enum.bad.php", line 7, characters 7-7:
Enum A includes C which is not an enum (Typing[4388])
